@@ -51,7 +51,10 @@ sub connections {
     my $settings = $user_dir->child($id, 'connection.json');
     next unless -e $settings;
     push @connections, Mojo::JSON::decode_json($settings->slurp);
-    delete $connections[-1]{state};    # should not be stored in connection.json
+
+    # should not be stored in connection.json
+    delete $connections[-1]{state};
+    delete $_->{frozen} for @{$connections[-1]{dialogs} || []};
   }
 
   return next_tick $self, $cb, '', \@connections if $cb;
